Modify default firefox styles to fix input appearance, fix alignent so it appears between quotes

--- a/src/index.css
+++ b/src/index.css
@@ -91,6 +91,9 @@ foreignObject input{
 	position:absolute;
 	z-index:3;
 }
+body{
+	font-family: "Helvetica Neue", "Arial", sans-serif;
+}
 #arrowHolder{
 	width:100%;
 	height:100%;
@@ -101,9 +104,11 @@ foreignObject input{
 	.arrows{
 		position:inherit;
 	}
-	svg{
-		font-size: 6;
-	}
+svg foreignObject input {
+	font-size: .5em;
+	width: 6em;
+	border: none;
+}
 	.ClickCircle{
 		font-size: .5em;
 	}
@@ -111,6 +116,7 @@ foreignObject input{
 .arrowAndElementsHolder{
 	position: relative;
 }
+
 .ClickShape{
 	font-size: .5em;
 }
